--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,35 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 
 
+
+.image_minuteur{
+
+	display: flex;
+	justify-content: center;
+	margin-top: 20%;
+	color: white;
+	text-shadow: black 0.1em 0.1em 0.2em
+}
+
+.image_minuteur img{
+
+	width: 20px;
+}
+
+.image_chronometre{
+
+	display: flex;
+	justify-content: center;
+	margin-bottom: 5%;
+	color: white; 
+	text-shadow: black 0.1em 0.1em 0.2em
+}
+
+.image_chronometre img{
+
+	width: 20px;
+}
+
 .min_chrono{
 
  background-image: url(../img/fond_chambre.png);
@@ -19,7 +48,9 @@ article{
 	justify-content: center;
 }
 
-.minuteur{
+
+
+.minuteur_chrono{
 
 	width: 400px;
 	border-radius: 30px; 
@@ -34,18 +65,17 @@ article{
 
 }
 
-.minuteur .boutton{
+.minuteur_chrono .minuteur{
 
 	display:flex;
 	flex-direction: column;
-	margin-top: 20%;
-	height: 150px;
+	height: 100px;
 	align-items: center;
 }
 
 #minuteur_terminee{
 
-	margin-top: 5%;
+	margin-top: 8%;
 	background-color: #CD6155;
 	color: white;
 	display: flex;
@@ -88,6 +118,7 @@ article{
 	justify-content: space-between;
 	width: 100%;
 	text-align: center;
+	font-size: 15px;
 }
 
 .nom_input p{
@@ -105,7 +136,16 @@ article{
 	margin-top: 8%;
 }
 
-.minuteur #lancer_minuteur, #reset_minuteur{
+.controle_chonometre{
+
+	display: flex;
+	justify-content: space-between;
+	width: 300px;
+	margin-top: 8%;
+}
+
+
+.minuteur_chrono #lancer_minuteur, #reset_minuteur, #lancer_chrono, #reset_chrono, #tour_chrono{
 
 	padding:6px 0 6px 0;
 	font:Bold 13px Arial;
@@ -117,13 +157,13 @@ article{
 	transition: 0.5s;
 }
 
-.minuteur #lancer_minuteur:hover, #reset_minuteur:hover{
+.minuteur_chrono #lancer_minuteur:hover, #reset_minuteur:hover, #lancer_chrono:hover, #reset_chrono:hover, #tour_chrono:hover{
 
 	cursor: pointer;
 	background: #7B241C;
 }
 
-.minuteur #heure, #minute, #seconde{
+.minuteur_chrono #heure, #minute, #seconde, #minute_chrono, #seconde_chrono, #milliseconde_chrono{
 
 	padding:6px 0 6px 0;
 	font:Bold 13px Arial;
@@ -137,17 +177,46 @@ article{
 
 }
 
-.minuteur #heure:hover, #minute:hover, #seconde:hover{
+.minuteur_chrono #heure:hover, #minute:hover, #seconde:hover{
 
 	cursor: pointer;
 	background-color: #A93226 ;
 
 }
 
-.minuteur  #heure:focus, #minute:focus, #seconde:focus {
+.minuteur_chrono  #heure:focus, #minute:focus, #seconde:focus{
 
   color: white;
   background-color: #7B241C;
 }
+
+
+.chonometre_div{
+
+	margin-top: 30%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#temps{
+
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	color: white;
+}
+
+#temps p{
+
+	margin-top: -10px;
+	height: 15px;
+}
+
+
+.chonometre_div h1{
+	color: white;
+}
+
 
 
