--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ input[type="number"]{
 
 	text-align: center;
 }
+
 .image_minuteur{
 
 	display: flex;
@@ -55,6 +56,7 @@ article{
 .minuteur_chrono{
 
 	width: 400px;
+	margin-top: 5%;
 	border-radius: 30px; 
 	height: 700px;
 	background-image: url(../img/telephone.png);
