--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,22 @@ input[type="number"]{
 	text-align: center;
 }
 
+
+
+@media (min-width: 1000px) {
+  #responsive{
+
+	position: absolute;
+	}
+}
+
+@media (max-width: 600px) {
+.minuteur_chrono{
+
+	margin-top: 5%;
+	}
+}
+
 .image_minuteur{
 
 	display: flex;
@@ -56,7 +72,6 @@ article{
 .minuteur_chrono{
 
 	width: 400px;
-	margin-top: 5%;
 	border-radius: 30px; 
 	height: 700px;
 	background-image: url(../img/telephone.png);
